# CMP-Email2CRM

./: .replit  README.md  package-lock.json  package.json  replit.md
.agents/: agent_assets_metadata.toml
.codesource/: .replit  attachment_processor.py  crm_client.py  design_guidelines.md  imap_client.py  llm_parser.py  main.py  pyproject.toml  replit.md  url_extractor.py
.codesource/attached_assets/: Pasted-Je-veux-cr-er-une-application-Email-Parser-pour-le-proj_1767804178213.txt
.codesource/client/src/: index.css
.codesource/client/src/pages/: home.tsx
.codesource/docs/: decisions.md  user_stories.md
.codesource/server/: routes.ts
attached_assets/: US001-crud-biens_1771605802557.md  US002-crud-demandes_1771606271133.md  client_entreprises-export-2026-04-15_17-40-50_1776669666474.csv
client/src/: App.tsx  index.css
client/src/components/: AdresseLink.tsx  bien-combobox.tsx  gestionnaire-combobox.tsx
client/src/pages/: bien-detail.tsx  bien-form.tsx  bien-search.tsx  biens-list.tsx  contacts-list.tsx  demande-detail.tsx  demande-form.tsx  demandes-list.tsx  emails-list.tsx  gestionnaires-list.tsx
docs/: comparatif-replit-lovable.md
migrations/: 0000_kind_namora.sql  0001_nullable_gestionnaire.sql  0002_demandes_info_manquantes.sql  0003_contacts_auto_generated.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  _journal.json
server/: email-service.ts  index.ts  routes.ts  seed.ts  storage.ts
server/replit_integrations/chat/: routes.ts  storage.ts
server/scripts/: import-clients.ts
shared/: schema.ts
