[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "flask>=3.1.2",
    "flask-cors>=6.0.2",
    "openai>=2.15.0",
    "pdfplumber>=0.11.9",
    "playwright>=1.58.0",
    "requests>=2.32.5",
]
